<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">SimpleMjpegView</string>
	<string name="app_name1">SimpleMjpegView1</string>
    
	<string name="settings">Settings</string>
	
	<string name="resolution_label">Resolution</string>
	<string name="resolution_times"> x </string>
	<string-array name="resolution_array">
        <item>640x480</item>
        <item>480x640</item>
        <item>320x240</item>
        <item>240x320</item>
        <item>176x144</item>
        <item>144x176</item>
        <item>Custom</item>
    </string-array>

	<string name="ip_setting_label">Address</string>
	<string name="port_setting_label">Port</string>
	<string name="command_setting_label">Command</string>
	
	<string name="digits_increment">+</string>
	<string name="digits_decrement">-</string>
	<string name="address_dot">.</string>
	<string name="port_80">80</string>
	<string name="port_8080">8080</string>
	<string name="port_80_with_explanation">80 (for Ai-ball)</string>
	<string name="port_8080_with_explanation">8080 (for IP Webcam)</string>	
	<string name="command_streaming">\?action=stream</string>
	<string name="command_videofeed">videofeed</string>
	<string name="command_streaming_with_explanation">\?action=stream (for Ai-ball)</string>
	<string name="command_videofeed_with_explanation">videofeed (for IP Webcam)</string>
	
	<string name="settings_done">Done</string>
	
	<string name="title_disconnected">Disconnected</string>
	<string name="title_disconnected1">Disconnected</string>
	<string name="title_connecting">Connecting&#8230;</string>
	<string name="title_connecting1">Connecting&#8230;</string>
	<string name="title_imageerror">Error on preparing images</string>
    <string name="title_activity_start_page">Oslagbarters1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="automatic">Automatic</string>
	<string name="manual">Manual</string>
    <string name="title_activity_mjpeg_activity1">MjpegActivity1</string>
	<string name="tap_shoot1">Shoot</string>
    <string name="title_activity_bluetooth_test">BluetoothTest</string>
	<string name="up">Up</string>
	<string name="left">Left</string>
	<string name="right">right</string>
	<string name="down">down</string>
	<string name="shoot">Shoot</string>
	<string name="connect">connect</string>
	<string name="page2" />
	<string name="page1" />
	<string name="page3" />
    <string name="title_activity_instructions">Instructions</string>
	<string name="Instructions">Instructions</string>
	<string name="connect_point1">(i)Press the connect button to connect to the bluetooth.</string>
	<string name="inst">Instructions</string>
	<string name="manual_point1">(i) In the manual mode there will be four keys to control the gun movement and a shoot button to shoot the bullet.</string>
	<string name="manual_point2">(ii) All keys work on tapping</string>
	<string name="Automatic">3.Automatic button</string>
	<string name="automatic_point1">(i) In automatic mode you will have to press the shoot button to trigger the gun as and when needed.</string>
</resources>